--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Main2Activity">
+    tools:context=".h5.Main2Activity">
 
     <Button
         android:id="@+id/btn_start"
