--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,4 +14,9 @@
         android:layout_height="wrap_content"
         android:text="Start" />
 
+    <WebView
+        android:id="@+id/web_view2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
