--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,11 @@
             android:text="btn3" />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/iv"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <WebView
         android:id="@+id/web_view"
